fix: moved all day to seperate folder

--- a/oneToTen/dayFour/four.css
+++ b/oneToTen/dayFour/four.css
@@ -17,11 +17,6 @@ button {
     border: none;
     font-family: inherit;
     cursor: pointer;
-    width: 130px;
-    height: 65px;
-    font-size: 17px;
-    font-weight: bolder;
-    border: none;
 }
 
 h1,
@@ -59,7 +54,7 @@ h6 {
     display: grid;
     width: 95%;
     margin: 40px auto;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(10, 1fr);
     gap: 0px;
     justify-items: start;
     border-radius: 5px;
@@ -82,11 +77,19 @@ h6 {
 /**-----------DAY ONE--------------------------**/
 
 .btn1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
     border: none;
     background-color: #447ce7;
     color: #f2f4ff;
+    font-size: 17px;
+    height: 70px;
+    width: 178px;
+    font-size: 20px;
     transition: 200ms ease-in-out;
-    transition-property: color, background-color, border;
+    transition-property: color, background-color, boder;
 }
 
 .btn1:hover {
@@ -98,15 +101,23 @@ h6 {
 
 /**-----------DAY TWO--------------------------**/
 
-.btn2 {
+.dayTwo {
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+}
+
+.dayTwo .btn2 {
     border: 2px solid #153a5b;
     color: #153a5b;
     background-color: #fefefe;
-    transition: 200ms ease-in-out;
-    transition-property: color, background-color, border;
+    font-weight: bold;
+    transition: background-color color 200s ease-in-out;
+    height: 68px;
+    width: 130px;
 }
 
-.btn2:hover {
+.dayTwo .btn2:hover {
     color: #fff;
     background-color: #153a5b;
 }
@@ -114,16 +125,17 @@ h6 {
 
 /**-----------DAY THREE----------------------------**/
 
-.btn3 {
+.dayThree .btn3 {
     border: 2px solid #d3959b;
     color: #d3959b;
     background-color: #fefefe;
     font-weight: bold;
-    transition: 200ms ease-in-out;
-    transition-property: color, background-color, border;
+    transition: background-color color 200s ease-in-out;
+    height: 68px;
+    width: 130px;
 }
 
-.btn3:hover {
+.dayThree .btn3:hover {
     color: #fefefe;
     background-color: #d3959b;
 }
@@ -131,33 +143,112 @@ h6 {
 
 /**-----------DAY FOUR-------------------------**/
 
-.btn4 {
-    border-radius: 10px;
-    color: #ffd700;
-    background: #222;
-    transition: 200ms ease-in-out;
-    transition-property: color, background-color, border;
+.dayFour {
+    width: 200px;
 }
 
-.btn4:hover {
-    color: #222;
-    background-color: #fefefe;
-    border: 2px solid #ffd700;
+.rate {
+    border-radius: 10px;
+    color: #fefefe;
+    background: #050506;
+    width: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.star span {
+    color: #ebebeb;
+}
+
+.dayFour .btn4 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30px;
+    color: inherit;
+    background: transparent;
+    width: 175px;
+    height: 65px;
+}
+
+.count {
+    text-align: right;
+    width: 45px;
+    font-size: 28px;
+    font-weight: bolder;
+    color: #ebebeb;
+}
+
+.count::before {
+    content: "";
+    display: block;
+    position: absolute;
+    background: #5c5c5c;
+    width: 2px;
+    height: 63px;
+    transform: translate(-50%, -25%);
+}
+
+.btn4:hover .star span {
+    color: #ffd700;
+    animation: spin 1.3s linear;
+    animation-fill-mode: forwards;
+}
+
+.flyingStar {
+    color: #ffd700;
+    transform-origin: 80px 50%;
+    animation: flying 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+@keyframes flying {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    50% {
+        transform: rotateZ(-180deg);
+    }
+    100% {
+        transform: rotateZ(-360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotateY(0deg);
+    }
+    16.6667% {
+        transform: rotateY(60deg);
+    }
+    33.3333% {
+        transform: rotateY(120deg);
+    }
+    50.0001% {
+        transform: rotateY(180deg);
+    }
+    66.3338% {
+        transform: rotateY(240deg);
+    }
+    83.3333% {
+        transform: rotateY(300deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
 
 
 /**---------------------Day Five----------------*/
 
 .btn5 {
+    width: 175px;
+    height: 65px;
     background: linear-gradient(to right, #e47070, #bbf0b8, #78b4e6);
     color: #3e3e3e;
     font-weight: bolder;
-    transition: 200ms ease-in-out;
-    transition-property: color, background, border;
-}
-
-.btn5:hover {
-    background: linear-gradient(to right, #ffdcdc, #e5ffe3, #e3f3ff);
 }
 
 
