--- a/style.css
+++ b/style.css
@@ -349,10 +349,19 @@ button {
 }
 
 
-/**---------------------Day Six----------------*/
+/**---------------------Day SIX----------------*/
 
-.btn6 .radical {
-    width: 20px;
-    height: 20px;
-    border: 1px solid red;
+.btn6 {
+    background: rgb(255, 242, 248);
+    background: radial-gradient( circle, rgba(255, 242, 248, 0.789838337182448) 35%, rgba(148, 187, 233, 1) 100%);
+    color: #153a5b;
+}
+
+
+/**---------------------Day SEVEN----------------*/
+
+.btn7 {
+    background: rgb(34, 193, 195);
+    background: linear-gradient( 0deg, rgba(34, 193, 195, 1) 0%, rgba(206, 255, 252, 1) 100%);
+    color: #153a5b;
 }
