--- a/oneToTen/daySix/six.css
+++ b/oneToTen/daySix/six.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -6,54 +10,103 @@ body {
     align-items: center;
     padding: 0;
     margin: 0;
-    background-color: rgb(54, 54, 54);
+    background-color: #fefefe;
+    font-family: "Spartan", sans-serif;
+    color: #545454;
 }
 
-.RGB {
+.XO {
+    box-shadow: 0px 0px 30px #ccc;
+    width: 550px;
+    height: 550px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+}
+
+.row {
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    margin: auto;
-    width: 300px;
-    border: 1px solid #bbb;
-    border-radius: 5px;
-    flex-flow: column nowrap;
+    gap: 120px;
 }
 
-.color {
-    border: 2px solid #bbb;
-    background-color: rgb(54, 54, 54);
-    border-radius: 5px;
-    width: 95%;
-    height: 250px;
-    margin: 10px;
+button {
+    font: inherit;
+    color: inherit;
+    background: #fefefe;
+    border: 2px solid #545454;
+    border-radius: 4px;
+    padding: 5px 15px;
+    transition: 300ms ease-in-out;
+    transition-property: color, border-color, font-weight;
 }
 
-label {
-    font-size: 25px;
-    color: #bbb;
+button:hover {
+    border-color: #0ca192;
+    color: #0ca192;
+    font-weight: bolder;
 }
 
-.range {
-    width: 90%;
-    appearance: none;
-    border-radius: 10px;
-    height: 10px;
-    margin: 10px 0;
+.turn {
+    font-size: 16px;
 }
 
-.red {
-    height: 5px;
-    background: linear-gradient(90deg, #000000, #ff0000);
+.boxes {
+    display: flex;
+    flex-flow: row wrap;
+    width: 550px;
+    height: 420px;
+    background-color: #14bdac;
+    border-radius: 3px;
 }
 
-.green {
-    height: 5px;
-    background: linear-gradient(90deg, #000000, #00ff00);
+.box {
+    width: 33.333%;
+    height: 33.333%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-weight: 600;
 }
 
-.blue {
-    height: 5px;
-    background: linear-gradient(90deg, #000000, #0000ff);
+.b0 {
+    border-right: 7px solid #0ca192;
+    border-bottom: 7px solid #0ca192;
+}
+
+.b1 {
+    border-bottom: 7px solid #0ca192;
+}
+
+.b2 {
+    border-left: 7px solid #0ca192;
+    border-bottom: 7px solid #0ca192;
+}
+
+.b3 {
+    border-right: 7px solid #0ca192;
+    border-bottom: 7px solid #0ca192;
+}
+
+.b4 {
+    border-bottom: 7px solid #0ca192;
+}
+
+.b5 {
+    border-bottom: 7px solid #0ca192;
+    border-left: 7px solid #0ca192;
+}
+
+.b6 {
+    border-right: 7px solid #0ca192;
+}
+
+.b8 {
+    border-left: 7px solid #0ca192;
 }
