refactor: changed the name of all folders, and ch8 created

--- a/index.css
+++ b/index.css
@@ -254,7 +254,7 @@ footer.hide .fa-angle-up {
 }
 
 
-/**----------------------For All Days------------**/
+/**----------------------For All CHs------------**/
 
 .day {
     display: flex;
@@ -276,7 +276,7 @@ button {
 }
 
 
-/**-----------DAY ONE--------------------------**/
+/**-----------CH ONE--------------------------**/
 
 .btn1 {
     border: none;
@@ -293,7 +293,7 @@ button {
 }
 
 
-/**-----------DAY TWO--------------------------**/
+/**-----------CH TWO--------------------------**/
 
 .btn2 {
     border: 2px solid #153a5b;
@@ -309,7 +309,7 @@ button {
 }
 
 
-/**-----------DAY THREE----------------------------**/
+/**-----------CH THREE----------------------------**/
 
 .btn3 {
     border: 2px solid #d3959b;
@@ -326,7 +326,7 @@ button {
 }
 
 
-/**-----------DAY FOUR-------------------------**/
+/**-----------CH FOUR-------------------------**/
 
 .btn4 {
     border-radius: 10px;
@@ -343,7 +343,7 @@ button {
 }
 
 
-/**---------------------Day Five----------------*/
+/**---------------------CH Five----------------*/
 
 .btn5 {
     background: linear-gradient(to right, #e47070, #bbf0b8, #78b4e6);
@@ -358,7 +358,7 @@ button {
 }
 
 
-/**---------------------Day SIX----------------*/
+/**---------------------CH SIX----------------*/
 
 .btn6 {
     background: #0ca192;
@@ -367,10 +367,18 @@ button {
 }
 
 
-/**---------------------Day SEVEN----------------*/
+/**---------------------CH SEVEN----------------*/
 
 .btn7 {
     background: rgb(255, 242, 248);
     background: radial-gradient( circle, rgba(255, 242, 248, 0.789838337182448) 35%, rgba(148, 187, 233, 1) 100%);
     color: #153a5b;
+}
+
+
+/**---------------------CH EIGHT----------------*/
+
+.btn8 {
+    background: #454545;
+    color: rgba(240, 239, 134, 0.8);
 }
