--- a/oneToTen/ch8/index.css
+++ b/oneToTen/ch8/index.css
@@ -25,16 +25,9 @@ body {
 }
 
 .dot {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     position: absolute;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-}
-
-.time {
-    /* padding: 10px; */
 }
 
 .smallDot {
@@ -44,7 +37,16 @@ body {
 }
 
 .bigDot {
-    width: 7px;
-    height: 7px;
+    width: 9px;
+    height: 9px;
     background: #bbb;
+}
+
+.time {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    margin-top: 2px;
+    font-weight: bolder;
+    font-size: 18px;
+    color: #a7a7a7;
 }
