--- a/11-20/ch11/index.css
+++ b/11-20/ch11/index.css
@@ -220,7 +220,7 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 35px;
+    width: 31px;
     height: 32px;
     background: #333;
     transition: all 0.3s ease-in-out;
@@ -230,8 +230,8 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 24px;
-    height: 24px;
+    width: 22px;
+    height: 22px;
     background-color: var(--secondary-color);
     border-radius: 50%;
     transition: background-color 0.3s ease-in-out;
@@ -255,12 +255,19 @@ span {
     height: 5px;
     background-color: var(--secondary-color);
     border-radius: 0 2px 2px 0;
+    transition: 0.3s ease-in-out;
+    transition-property: background-color, border-radius;
 }
 
 .lineSwitch .lCh:checked+.lineSwitchContainer .square {
-    transform: translateX(140%);
+    transform: translateX(155%);
+}
+
+.lineSwitch .lCh:checked+.lineSwitchContainer .line {
+    background-color: #eee;
+    border-radius: 2px 0 0 2px;
 }
 
 .lineSwitch .lCh:checked+.lineSwitchContainer .square :is(.outerBall, .innerBall) {
-    background-color: #eee;
+    background-color: var(--primary-color);
 }
